# circomlib-fhe

./: .gitmodules  BLOG_Arithmetization.md  BLOG_Circom  BLOG_FHEW-TFHE.md  LICENSE  README-SecureAggregation.md  README.md  doe-suite-setup.sh
ark-fhe/: Cargo.toml
ark-fhe/benches/: groth16.rs
ark-fhe/src/: groth16.rs  lib.rs  main.rs
bench/: README.md  bench.py  benchLweArrayAccess2DBin.circom  benchLweArrayAccess2DBin2.circom  benchLweKeySwitchSmall.circom  benchMedium.circom  benchMediumNoiseFlooding.circom  benchMedium_Ring.circom  benchPlaintextCheck.circom  benchRlweAddToAccCGGI.circom  benchRlweAddToAccDM.circom  benchRlweArrayAccessBSKBin.circom  benchRlweBootstrapCoreFHEWSmall.circom  benchRlweBootstrapCoreTFHESmall.circom  benchRlweBootstrapFHEWSmall.circom  benchRlweBootstrapTFHESmall.circom  benchRlweExtractFromAcc.circom  benchRlweGetBinomial.circom  benchRlweInitAcc.circom  benchRlweNTT.circom  benchRlweNandFHEWSmall.circom  benchRlweNandTFHESmall.circom  benchRlweUpdateCGGISmall.circom  benchRlweUpdateDMSmall.circom  benchSmall.circom  benchSmallNonMod.circom  benchSmall_Ring.circom  benchTiny.circom  benchTiny_Ring.circom  bench_lwe.sh  bench_rlwe.sh  main_benchLweAdd.circom  main_benchLweArrayAccess2DBin2.circom  main_benchLweKeySwitchSmall.circom  main_benchLweModSwitch.circom  main_benchLweModSwitchInt.circom  main_benchLweSub.circom  main_benchMedium.template  main_benchPlaintextCheckWithNTT.circom  main_benchRlweAdd.circom  (+17 more)
circuits/: Makefile  README.md  _main_add_poly.template  _main_mulPointwise_poly.template  _main_mulSchoolbook_poly.template  add.circom  addCRT_1.circom  add_1.circom  add_custom.circom  array_access.circom  bench.py  benchMedium.circom  benchMedium_Ring.circom  benchSmall_Ring.circom  bench_all.sh  bootstrap.circom  bootstrap_fhew.circom  bootstrap_tfhe.circom  fast_compconstant.circom  lwe.circom  lwe_test.circom  main.circom  main_.circom  main_SecAgg_EC+ZKP.template  main_SecAgg_RLWE+ZKP.circom  main_SecAgg_RLWE+ZKP.template  main_addRNS_1.circom  main_addRNS_poly.circom  main_add_poly.circom  main_bench1.template  main_benchMedium.16384.circom  main_benchMedium.8192.circom  main_benchMedium.template  main_benchMediumNoiseFlooding.circom  main_benchMediumNoiseFlooding_Ring.circom  main_benchPlaintextCheckWithNTT_Ring.circom  main_benchSmall.16384.circom  main_benchSmall.8192.circom  main_benchSmall.template  main_benchSmallNonMod.16384.circom  (+26 more)
circuits/benches/: benchLweArrayAccess2DBin.circom  benchLweArrayAccess2DBin2.circom  benchLweKeySwitch.circom  benchLweKeySwitchSmall.circom  benchMedium.circom  benchMediumNoiseFlooding.circom  benchMedium_Ring.circom  benchPlaintextCheck.circom  benchRlweAddToAccCGGI.circom  benchRlweAddToAccDM.circom  benchRlweArrayAccessBSKBin.circom  benchRlweBootstrapCoreFHEWSmall.circom  benchRlweBootstrapCoreTFHESmall.circom  benchRlweBootstrapFHEWSmall.circom  benchRlweBootstrapTFHESmall.circom  benchRlweExtractFromAcc.circom  benchRlweGetBinomial.circom  benchRlweInitAcc.circom  benchRlweNTT.circom  benchRlweNandFHEWSmall.circom  benchRlweNandTFHESmall.circom  benchRlweUpdateCGGISmall.circom  benchRlweUpdateDMSmall.circom  benchSmall.circom  benchSmallNonMod.circom  benchSmall_Ring.circom  benchTiny.circom  benchTiny_Ring.circom  main_benchLweAdd.circom  main_benchLweArrayAccess.circom  main_benchLweArrayAccess2DBin.circom  main_benchLweArrayAccess2DBin2.circom  main_benchLweArrayAccessBin.circom  main_benchLweArrayAccessBin2.circom  main_benchLweKeySwitch.circom  main_benchLweModSwitch.circom  main_benchLweModSwitchInt.circom  main_benchLweRoundDiv.circom  main_benchLweRoundDivQ.circom  main_benchLweSub.circom  (+17 more)
circuits/test/: array_access_test.circom  bootstrap_fhew_test.circom  fast_compconstant_test.circom  lwe_test.circom  signed_decomposition_test.circom  test_array_access.sh  test_lwe.sh
doe-suite-config/: .gitignore  pyproject.toml
doe-suite-config/designs/: zkp-fhe.yml
doe-suite-config/does_etl_custom/etl/: custom.py
doe-suite-config/group_vars/all/: main.yml
doe-suite-config/group_vars/base/: main.yml
doe-suite-config/roles/setup-base/tasks/: main.yml
doe-suite-config/roles/setup-circom/tasks/: main.yml
doe-suite-config/super_etl/: paper_plots.yml
fhe/: .gitignore  CMakeLists.txt  bench_medium.cpp  bench_small.cpp  bench_tiny.cpp  run_medium.sh  run_small.sh  secure_aggregation.cpp
fhe-bulletproofs/: Cargo.toml
fhe-bulletproofs/benches/: medium.rs  secure-aggregation.rs  small.rs  tiny.rs
fhe-bulletproofs/src/: gadgets.rs  lib.rs  main.rs  medium.rs  range_proof.rs  secure_aggregation.rs  signed_integer.rs  small.rs  tiny.rs  utils.rs  values.rs
fhe_groth16/: Cargo.toml
fhe_groth16/benches/: groth16-generic.rs  groth16.rs
fhe_groth16/src/: main.rs
fhe_groth16/test_vectors/: main_add_poly.16.circom  main_add_poly.16.r1cs
fhe_groth16/test_vectors/main_add_poly.16_js/: main_add_poly.16.wasm
results/: secure_aggregation.csv
test/: README.md  array_access_test.circom  bootstrap_fhew_test.circom  fast_compconstant_test.circom  lwe_test.circom  signed_decomposition_test.circom  test.sh
