[package]
name = "ark-fhe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0.26"
ark-circom = { git = "https://github.com/laizy/ark-circom.git", branch = "fix-wasm", features = ["circom-2"] }
ark-bn254 = "0.3.0"
ark-groth16 = "0.3.0"
rand = "0.8.5"
ark-crypto-primitives = "0.3.0"
ark-snark = "0.3.0"
num-bigint = "0.4"