[package]
name = "fhe-bulletproofs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bulletproofs = { version = "4.0.0", features = ["yoloproofs"], optional = true }
crypto-bigint = "0.4.9"
merlin = { version = "3.0.0", optional = true }
bumpalo = "3.11.1"
petgraph = "0.6.2"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
static_assertions = "1.1.0"
rand = "0.8.5"
num-bigint = "0.4"
ark-std = "0.3.0"

[features]
default = ["bulletproofs"]
bulletproofs = [
    "dep:bulletproofs",
    "dep:merlin"
]

[dependencies.curve25519-dalek]
version = "4"
features = ["u64_backend", "serde"]
default-features = false
package = "curve25519-dalek-ng"

[[bench]]
name = "tiny"
harness = false

[[bench]]
name = "small"
harness = false

[[bench]]
name = "medium"
harness = false

[[bench]]
name = "secure-aggregation"
harness = false