[package]
name = "ark-fhe"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
num-bigint = "0.4"
clap = "4.0.26"

criterion = "0.4.0"

ark-crypto-primitives = "0.3.0"
ark-snark = "0.3.0"
ark-relations = "0.3.0"
ark-ec = "0.3.0"
ark-poly = "0.3.0"
ark-poly-commit = "0.3.0"
ark-bn254 = "0.3.0"
ark-bls12-381 = "0.3.0"

ark-groth16 = "0.3.0"

ark-circom = { git = "https://github.com/laizy/ark-circom.git", branch = "fix-wasm", features = ["circom-2"] }

ark-ff = "0.3.0"
ark-std = "0.3.0"


[[bench]]
#name = "groth16"
name="groth16-generic"
harness = false
